style/add-target-blank added to kor on eks

--- a/dashboards/index.html
+++ b/dashboards/index.html
@@ -116,7 +116,7 @@
                     <td>kor</td>
                     <td><a href="https://github.com/yonahd/kor" target="_blank">GitHub</a></td>
                     <td>
-                        <a class="kor" href="#">eks </a>/
+                        <a class="kor" href="#" target="_blank">eks </a>/
                         <a class="kor" href="#" target="_blank">gke </a>/
                         <a class="kor" href="#" target="_blank">aks </a>
                     </td>
