feature/basic-ai-agent added a basic ai agent, implemented with rag

--- a/dashboards/index.html
+++ b/dashboards/index.html
@@ -103,7 +103,7 @@
                     <td>polaris</td>
                     <td><a href="https://github.com/FairwindsOps/polaris" target="_blank">GitHub</a></td>
                     <td>
-                        <a class="polaris" href="#" target="_blank">eks </a>/
+                        <a class="polaris" href="http://172.20.4.44" target="_blank">eks </a>/
                         <a class="polaris" href="#" target="_blank">gke </a>/
                         <a class="polaris" href="#" target="_blank">aks </a>
                     </td>
@@ -116,7 +116,7 @@
                     <td>kor</td>
                     <td><a href="https://github.com/yonahd/kor" target="_blank">GitHub</a></td>
                     <td>
-                        <a class="kor" href="#" target="_blank">eks </a>/
+                        <a class="kor" href="http://172.20.70.31" target="_blank">eks </a>/
                         <a class="kor" href="#" target="_blank">gke </a>/
                         <a class="kor" href="#" target="_blank">aks </a>
                     </td>
@@ -129,7 +129,7 @@
                     <td>trivy-operator</td>
                     <td><a href="https://github.com/aquasecurity/trivy-operator" target="_blank">GitHub</a></td>
                     <td>
-                        <a class="trivy-operator" href="#" target="_blank">eks </a>/
+                        <a class="trivy-operator" href="http://172.20.70.31" target="_blank">eks </a>/
                         <a class="trivy-operator" href="#" target="_blank">gke </a>/
                         <a class="trivy-operator" href="#" target="_blank">aks </a>
                     </td>
@@ -142,7 +142,7 @@
                     <td>kubesec</td>
                     <td><a href="https://github.com/controlplaneio/kubesec" target="_blank">GitHub</a></td>
                     <td>
-                        <a class="kubesec" href="#" target="_blank">kubesec</a>
+                        <a class="kubesec" href="kubesec.html" target="_blank">kubesec</a>
                     </td>
                     <td class="stars">
                         <img alt="stars" src="https://img.shields.io/github/stars/controlplaneio/kubesec?logo=github">
@@ -153,7 +153,7 @@
                     <td>checkov</td>
                     <td><a href="https://github.com/bridgecrewio/checkov/tree/main/kubernetes" target="_blank">GitHub</a></td>
                     <td>
-                        <a class="checkov" href="#" target="_blank">eks </a>/
+                        <a class="checkov" href="eks/checkov.html" target="_blank">eks </a>/
                         <a class="checkov" href="#" target="_blank">gke </a>/
                         <a class="checkov" href="#" target="_blank">aks </a>
                     </td>
@@ -166,7 +166,7 @@
                     <td>kube-score</td>
                     <td><a href="https://github.com/zegl/kube-score" target="_blank">GitHub</a></td>
                     <td>
-                        <a class="kube-score" href="#" target="_blank">kube-score</a>
+                        <a class="kube-score" href="kube-score.html" target="_blank">kube-score</a>
                     </td>
                     <td class="stars">
                         <img alt="stars" src="https://img.shields.io/github/stars/zegl/kube-score?logo=github">
